# rust-json-parser

./: .gitignore  README.md  questions.md
.work/week1/: wins.md
rust-json-parser/: Cargo.toml  pyproject.toml  requirements.txt
rust-json-parser/python/rust_json_parser/: __init__.py  __main__.py
rust-json-parser/src/: error.rs  lib.rs  main.rs  parser.rs  python_bindings.rs  tokenizer.rs  utils.rs  value.rs
rust-json-parser/tests/: test_python_integration.py
